# OpenCL-demo-SITCON2018

./: .gitignore  LICENSE  READEME.md
demo/: main.cpp
heatflow/: CMakeLists.txt  kernels.cl
heatflow/DisplayWindow/: CMakeLists.txt
heatflow/DisplayWindow/include/: GLSLSource.hpp  GLdef.hpp  Log.h  SDLScancodeTable.hpp  SDLWindow.hpp  Shader.hpp  Surface.hpp  Window.hpp  WindowBase.hpp
heatflow/DisplayWindow/src/: SDLWindow.cpp  Shader.cpp  Surface.cpp  WindowBase.cpp
heatflow/heatflow/: CMakeLists.txt
heatflow/heatflow/src/: main.cpp
vecadd/: kernel.cl  main.cpp
